# python-package-template

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/actions/commitlint/: action.yaml
.github/actions/pytest/: action.yaml
.github/actions/release/: action.yaml
.github/workflows/: ci-cd.yaml
src/pyname/: __init__.py  pyname.py
tests/: test_name.py
